# nanotalk2

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  configure.ac
data/: aliases.txt
plugins/: Makefile.am  gstrtpcrypto.c  gstrtpdecrypt.h  gstrtpencrypt.c  gstrtpencrypt.h
po/: Makefile.am  Makevars  POTFILES.in  cs.po
po/cs_CZ.UTF8/: Makefile.am  nanotalk.po
src/: Makefile.am  application.c  application.h  dht-client.c  dht-client.h  dht-common.c  dht-common.h  dhtclient.c  dhtclient.h  glib-compat.h  gstrtpdecrypt.c  gstrtpencrypt.c  main.c  preferences.h  ringback.c  ringback.h  rtp-session.c  rtp-session.h  rtp-sink.c  rtp-sink.h  rtp-src.c  rtp-src.h  rtp-tone.c  rtp-tone.h  rtpdecrypt.c  rtpdecrypt.h  rtpencrypt.c  rtpencrypt.h  server.c  test.c  tonegen.c  tonegen.h
test/: launcher.py  test1.cfg  test2.cfg  test2.key  wireshark-plugin.lua
test/Test1/.nanotalk/: aliases.txt  user.cfg  user.key
test/Test2/.nanotalk/: user.cfg
util/: Makefile  Makefile.am  configure.ac  dhtclient.c  dhtclient.h  glib-compat.h  server.c
